2006-05-15  Ulrich Drepper  <drepper@redhat.com>

	* dcigettext.c (category_to_name): Adjust for _nl_category_names
	change.

2006-04-06  Ulrich Drepper  <drepper@redhat.com>

	* finddomain.c (_nl_find_domain): We never return NULL if we found the
	locale.

2005-12-21  Roland McGrath  <roland@redhat.com>

	* l10nflist.c (_nl_make_l10nflist): Free ABS_FILENAME when later malloc
	fails.

2006-05-17  Bruno Haible  <bruno@clisp.org>

	Cygwin portability.
	* loadinfo.h (PATH_SEPARATOR) [CYGWIN]: Define as ':'.
	* localename.c (WIN32_NATIVE): Renamed from WIN32.
	* localcharset.c (WIN32_NATIVE): Renamed from WIN32.

2006-05-16  Bruno Haible  <bruno@clisp.org>

	* localcharset.c [CYGWIN]: Include <windows.h>.
	(get_charset_aliases): For Cygwin, return the same CPxxx aliases list
	as under WIN32.
	(locale_charset) [CYGWIN]: Try to retrieve the encoding from the
	environment variables. Fall back to GetACP().

2006-05-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LDFLAGS, libgnuintl.h): Treat mingw like Cygwin.

2006-05-15  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in: Move the _INTL_MAY_RETURN_STRING_ARG annotations
	from the function definition to the function declaration. Needed in
	C++ mode.

2006-05-11  Bruno Haible  <bruno@clisp.org>

	* intl-exports.c: New file.
	* osdep.c: Include it on Cygwin.
	* Makefile.in (LDFLAGS_yes, LDFLAGS_no): New variables.
	(LDFLAGS): Use it.
	(SOURCES): Add intl-exports.c.
	(libgnuintl.h): When compiling a DLL on Cygwin, mark all exported
	variables as to be imported.

2006-04-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (MKINSTALLDIRS, mkinstalldirs): Remove variables.
	(mkdir_p): New variable.
	(install-exec, install-data, installdirs): Use $(mkdir_p) instead of
	$(mkinstalldirs).

2006-04-05  Bruno Haible  <bruno@clisp.org>

	* config.charset: Update Juan Manuel Guerrero's address.

2006-03-11  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (_INTL_MAY_RETURN_STRING_ARG): Define to empty when