@@ -1,3 +1,10 @@
+2006-05-24  Bruno Haible  <bruno@clisp.org>
+
+	* printf-args.c (printf_fetchargs): Turn NULL pointers for
+	TYPE_STRING and TYPE_WIDE_STRING into a non-NULL replacement.
+	Reported by Thorsten Maerz <torte@netztorte.de> via
+	Aaron Stone <aaron@serendipity.cx>.
+
 2006-05-15  Ulrich Drepper  <drepper@redhat.com>
 
 	* dcigettext.c (category_to_name): Adjust for _nl_category_names
